# gaol

./: Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs  profile.rs  sandbox.rs
src/platform/: mod.rs
src/platform/linux/: mod.rs  namespace.rs  seccomp.rs
src/platform/unix/: process.rs
src/platform/windows/: app_container.rs  mod.rs  process.rs
tests/: empty-sandbox.rs  file-read-all.rs  file-read-metadata.rs  network-outbound.rs  system-info-read.rs
