[package]
name = "gaol"
version = "0.2.1"
authors = ["The Servo Project Developers"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/gaol"
repository = "https://github.com/servo/gaol"
description = "OS-level application sandboxing library"
edition = "2021"

[dependencies]
libc = "0.2"
thiserror = "1.0.48"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48"
features = [
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_System_Kernel",
    "Win32_Storage_FileSystem",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
]

[dev-dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
rand = "0.7"

[[test]]
name = "empty-sandbox"
path = "tests/empty-sandbox.rs"
harness = false

[[test]]
name = "file-read-all"
path = "tests/file-read-all.rs"
harness = false

[[test]]
name = "file-read-metadata"
path = "tests/file-read-metadata.rs"
harness = false

[[test]]
name = "forbidden-syscalls"
path = "tests/forbidden-syscalls.rs"
harness = false

[[test]]
name = "network-outbound"
path = "tests/network-outbound.rs"
harness = false

[[test]]
name = "system-info-read"
path = "tests/system-info-read.rs"
harness = false
